// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookmarkButtonDetails component snapshot Should correctly render BookmarkButtonDetails component (active) 1`] = `
<button
  className="property__bookmark-button button property__bookmark-button--active"
  onClick={[Function]}
  type="button"
>
  <svg
    className="property__bookmark-icon"
    height={33}
    width={31}
  >
    <use
      xlinkHref="#icon-bookmark"
    />
  </svg>
  <span
    className="visually-hidden"
  >
    To bookmarks
  </span>
</button>
`;

exports[`BookmarkButtonDetails component snapshot Should correctly render BookmarkButtonDetails component (not active) 1`] = `
<button
  className="property__bookmark-button button "
  onClick={[Function]}
  type="button"
>
  <svg
    className="property__bookmark-icon"
    height={33}
    width={31}
  >
    <use
      xlinkHref="#icon-bookmark"
    />
  </svg>
  <span
    className="visually-hidden"
  >
    To bookmarks
  </span>
</button>
`;
